<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
    <string name="app_name"></string>
    <string name="btnSendComment">发送</string>
    <string name="menu_item_title">Inbox</string>
    <string name="btnDone">Done</string>
    <string name="user_name">HAHA</string>
    <string name="user_introduce">不知道该说啥，就假装我是个人简介的样子</string>
    <string name="btn_following">following</string>
    <string name="text_share_to">SHARE TO</string>
    <string name="text_followers">FOLLOWERS</string>
    <string name="text_direct">DIRECT</string>
    <string name="content_image">PHOTO</string>
    <string name="text_comment">我是评论233</string>
    <string name="text_like_counter">666 likes</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_report">REPORT</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="text_header">TimeDiary</string>
    <string name="text_send">SEND</string>
    <string name="text_send_done">✓</string>
    <string name="drawer_login">登陆</string>
    <string name="drawer_user_information">个人资料</string>
    <string name="drawer_photo">照片整理</string>
    <string name="drawer_help">帮助与反馈</string>
    <string name="btn_login">注册</string>
    <string name="btn_sighup">登陆</string>
    <string name="hint1">邮箱</string>
    <string name="hint2">密码不少于六位</string>
    <string name="title">查看全部评论</string>
    <string name="checked">记住密码</string>
    <string name="error">邮箱或密码错误</string>

<plurals name="likes_count">
    <item quantity="one">%d like</item>
    <item quantity="other">%d likes</item>
</plurals>
<string-array name="user_photos">

</string-array>
<string name="user_profile_photo">http://p1.bqimg.com/567571/b53367089f7d5b9f.jpg</string>
</resources>
