<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/btnReport"
        style="@style/ContextMenuButton"
        android:text="@string/btn_report"
        android:textColor="#ffffff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <Button
        android:id="@+id/btnSharePhoto"
        style="@style/ContextMenuButton"
        android:text="@string/btn_share"
        android:textColor="#ffffff"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/ContextMenuButton"
        android:text="@string/btn_cancel"
        android:textColor="#ffffff"/>

</merge>