<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/elevation_size"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_share_to"
                android:textColor="#333333"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <!-- 仅向followers分享 -->
            <ToggleButton
                android:id="@+id/tbFollowers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/switch_publish_followers"
                android:checked="true"
                android:textColor="#ffffff"
                android:textOff="@string/text_followers"
                android:textOn="@string/text_followers" />

            <!-- 直接分享 -->
            <ToggleButton
                android:id="@+id/tbDirect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@drawable/switch_publish_direct"
                android:textColor="#207771"
                android:textOff="@string/text_direct"
                android:textOn="@string/text_direct" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:background="#eeeeee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:contentDescription="@string/content_image"/>

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="0dp"
                        android:layout_height="96dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:lines="3"
                        android:padding="8dp"
                        android:textColor="#333333"
                        android:textSize="14sp"
                        android:inputType="text"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

<!-- ToggleButton和Switch的区别 -->