<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.lwxwl.justtry.RevealBackgroundView
        android:id="@+id/vRevealBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvUserProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_edit_white_24dp"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- 查看下面的时候这一块是可以收上去的，好看哈哈 -->
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:id="@+id/vUserProfileRoot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="24dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="64dp"
                    app:layout_collapseMode="parallax">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipChildren="false">

                        <ImageView
                            android:id="@+id/ivUserProfilePhoto"
                            android:layout_width="@dimen/user_profile_avatar_size"
                            android:layout_height="@dimen/user_profile_avatar_size"
                            android:layout_marginRight="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="#ffffff"
                            />
                        <!-- 最好补充一张头像 -->

                        <LinearLayout
                            android:id="@+id/vUserDetails"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/user_name"
                                android:textColor="#ffffff"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/user_introduce"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />

                            <Button
                                android:id="@+id/btnFollow"
                                android:layout_width="match_parent"
                                android:layout_height="24dp"
                                android:layout_marginRight="24dp"
                                android:layout_marginEnd="24dp"
                                android:layout_marginTop="8dp"
                                android:background="@drawable/btn_following"
                                android:text="@string/btn_following"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vUserStats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp">

                        <!-- 嗯，这里是日记数量 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="666"
                                android:textColor="#ffffff"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="posts"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <!-- 诶嘿，这里是关注自己的小伙伴们 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="888"
                                android:textColor="#ffffff"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="followers"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <!-- 这里是自己关注的巨巨 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="XXX"
                                android:textColor="#ffffff"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="following"
                                android:textColor="#ffffff"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:elevation="@dimen/elevation_size"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

            <!-- 这是那一片小图标 -->
            <FrameLayout
                android:id="@+id/flContentRoot"
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <!-- app:tabMode="fixed"让它们不要挤在一起 -->
                <android.support.design.widget.TabLayout
                    android:id="@+id/tlUserProfileTabs"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/colorAccent"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="#2bd5b3"
                    app:tabIndicatorHeight="4dp"
                    app:tabMode="fixed" />

            </FrameLayout>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>